# Ownstacklapce

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE-OWNSTACK  Makefile  NOTICE  OWNSTACK_USER_TEST_REPORT.md  README.md  build_final_check_2.txt  build_final_check_3.txt  build_warnings.txt  build_warnings_latest.txt  check_lapce_proxy_latest.txt  check_ownstack_agent_latest.txt  docker-bake.hcl  lapce.spec
.agent/workflows/: codebase-explorer.md
.agent/workflows/scripts/: analyze_workspace.py  check-node-modules.ps1  check-node-modules.sh  check-python-modules.ps1  check-python-modules.sh  check-rust-modules.ps1  check-rust-modules.sh  quick-scan.ps1  quick-scan.sh
.agent/workflows/templates/: checklist.md  report_template.md
.github/workflows/: ci.yml  release.yml
.ownstack/: budgets.json  current_phase.json  python_bridge_metrics.jsonl  routing.json
.ownstack_e2e/scraper_bot_runtime/: Cargo.toml  README.md  SCRAPER_MISSION_OK  run_test.sh
.ownstack_e2e/scraper_bot_runtime/fixtures/: sample.html
.ownstack_e2e/scraper_bot_runtime/src/: lib.rs  main.rs
.ownstack_e2e/scraper_bot_runtime/tests/: parser.rs
artifacts/e2e/: report.md  summary.json
defaults/: icon-theme.toml  keymaps-macos.toml  keymaps-nonmacos.toml  routing_template.json  settings.toml
docs/: ARCHITECTURE.md  OPERATIONS.md  PHASE_AUDIT_0_12.md  PLUGIN_GUIDE.md  PYTHON_BRIDGE_CONTRACT.md  ROADMAP.md  TOP_PYTHON_DEBTS.md  agent-capability-report.md  building-from-source.md  etat-ownstack-29-juin-2026.md  installing-with-package-manager.md  launch-announcement-v0.1.0.md  packaging-distribution.md  ui-polish-progress.md  ux-improvement-plan.md  ux-test-session-report.md  ux-test-session-v2-features.md  ux-test-session-v3-post-fix.md
docs/historical/: CODEBASE_ANALYSIS_REPORT.md  NEXT_IMPROVEMENTS_PLAN.md  OBSOLETE_FILES_AUDIT.md  PHASE_AUDIT_0_12.md  new-release.md
e2e/: Cargo.toml
e2e/fixtures/project/: README.md
e2e/fixtures/project/src/: broken.rs  main.rs
e2e/src/: lib.rs
e2e/tests/: e2e_golden_path.rs
extra/linux/: dev.lapce.lapce.desktop  io.ownstack.ownstackide.desktop  io.ownstack.ownstackide.metainfo.xml
extra/linux/flatpak/: io.ownstack.ownstackide.yml
extra/windows/scoop/: ownstack-ide.json
extra/windows/wix/: lapce.wxs
lapce-app/: Cargo.toml
lapce-app/src/: about.rs  app.rs  command.rs  config.rs  db.rs  e2e_driver.rs  editor.rs  editor_tab.rs  history.rs  id.rs  lib.rs  main_split.rs  ownstack_audit.rs  ownstack_chat.rs  ownstack_empty_state.rs  ownstack_fim.rs  ownstack_inline_edit.rs  ownstack_mcp.rs  ownstack_mentions.rs  ownstack_onboarding.rs  ownstack_palette.rs  ownstack_preview.rs  ownstack_status.rs  ownstack_tests.rs  ownstack_theme.rs  palette.rs  plugin.rs  status.rs  title.rs  update.rs  window_tab.rs
lapce-app/src/app/: grammars.rs  logging.rs
lapce-app/src/config/: core.rs  icon.rs
lapce-app/src/editor/: view.rs
lapce-app/src/file_explorer/: view.rs
lapce-app/src/panel/: data.rs  kind.rs  view.rs
lapce-app/wix/: main.wxs
lapce-core/: build.rs
lapce-proxy/: Cargo.toml
lapce-proxy/src/: dispatch.rs  lib.rs  lsp_discovery.rs
lapce-proxy/src/plugin/: mod.rs  wasi.rs
lapce-rpc/src/: core.rs  lib.rs  ownstack.rs  proxy.rs
ownstack-agent/: Cargo.toml
ownstack-agent/.ownstack/telemetry/: test-session.jsonl
ownstack-agent/examples/: evals.rs  exec_probe.rs  fim_test.rs  project_run.rs  rag_test.rs  realtest.rs  realtest2.rs  realtest3.rs  realtest4.rs  realtest5.rs  test_openrouter.rs  test_openrouter_stream.rs  test_tool_execution.rs
ownstack-agent/src/: acp.rs  artifact_manager.rs  context.rs  context_builder.rs  fim.rs  index.rs  infra_sense.rs  lib.rs  lsp.rs  main.rs  mcp_server.rs  orchestrator.rs  policy_approval.rs  project_memory.rs  project_runner.rs  provider.rs  repomap.rs  resilience.rs  routing.rs  secret_store.rs  semantic_chunk.rs  telemetry.rs
ownstack-agent/src/mission/: compiler.rs  manager.rs  mod.rs  models.rs  openclaw.rs
ownstack-agent/src/plugins/: mod.rs
ownstack-agent/src/providers/: anthropic.rs  local.rs  mod.rs  openai_compatible.rs  openrouter.rs
ownstack-agent/src/toolkits/: browser.rs  core.rs  extra.rs  git.rs  healer.rs  lsp.rs  mcp.rs  mod.rs  multivers.rs  time_machine.rs  vision.rs
ownstack-agent/src/toolkits/specialists/: designer.rs  docs.rs  mod.rs  pm.rs  qa.rs  reviewer.rs  security.rs
ownstack-agent/tests/: e2e_offline_smoke.rs  lsp_tests.rs  mcp_client_integration.rs  mock_lsp.py  mock_mcp_server.py  resilience_tests.rs  ui_stress.rs  wasi_integration.rs
ownstack-bridge/: Cargo.toml
ownstack-bridge/examples/: simulate_traffic.rs
ownstack-bridge/src/: lib.rs
ownstack-engine/: Cargo.toml
ownstack-engine/examples/: ai_feature_tour.rs  capture_screen.rs
ownstack-engine/src/: audit.rs  lib.rs  path_safety.rs  policy.rs  security.rs  tool_result.rs  vision.rs
ownstack-engine/src/sandbox/: docker.rs  linux.rs  macos.rs  mod.rs  process.rs
ownstack-engine/tests/: sandbox_linux.rs  sandbox_stress.rs
ownstack-python/: .env.template  ownstack_backend.spec  requirements.txt  test_bridge.py
ownstack-python/app/: bridge_rpc.py  main.py
ownstack-python/app/agent/: artifact_manager.py  core.py  healer.py  memory.py  prompts.py  tools.py
plugins/: hello_world.wasm  hello_world.wasm.sig
scripts/: build_appimage.sh  build_flatpak_bundle.sh  build_windows_installer.ps1  bundle_python.py  doctor.py  generate_icons.py  healthcheck.py  launch_dev.ps1  launch_installed.ps1  package-windows.ps1  patch_install.ps1  report_python_debt.py  smoke-test-portable.ps1  test_policy_approval.py  ui_input.ps1  ui_screenshot.ps1  verify_agent_spawn.py  verify_sandbox_exec.py
tests/e2e/: README.md  test_agent_rpc.py  test_mcp_handshake.py  test_mini_project_mission.py  test_packaging_install_run.py  test_policy_approval.py  test_python_debt_report.py  test_scraper_bot_mission.py  test_user_ai_features.py  test_wasi_plugin.py  verify_agent_spawn.py  verify_escape_mitigation.py  verify_llm_e2e.py  verify_sandbox_exec.py
(+71 files in other folders)
