[package]
name = "ownstack-e2e"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tempfile = { workspace = true }

[[test]]
name = "e2e_golden_path"
path = "tests/e2e_golden_path.rs"
