[package]
name = "ownstack-agent"
version = "0.1.0"
edition = "2021"
authors = ["OwnStack Team"]
description = "Native Rust AI agent for OwnStack IDE"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"

# Security integration
ownstack-engine = { path = "../ownstack-engine" }

# Streaming
tokio-stream = "0.1"
futures-util = "0.3"

# LSP support
lsp-types = { version = "0.94", features = ["proposed"] }
url = "2"



[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
futures = "0.3"
serde_json = "1"
