[package]
name = "ownstack-agent"
version = "0.1.0"
edition = "2021"
authors = ["OwnStack Team"]
description = "Native Rust AI agent for OwnStack IDE"
license = "MIT"

[[bin]]
name = "ownstack-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
base64-simd = "0.8"
ed25519-dalek = "2.1"
# RAG / ML

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lapce-rpc = { path = "../lapce-rpc" }
tracing-subscriber = "0.3"
regex = { workspace = true }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
keyring = "2.3.3"

# Security integration
ownstack-engine = { path = "../ownstack-engine" }

# Streaming
tokio-stream = "0.1"
futures-util = "0.3"

# LSP support
lsp-types = { version = "0.94", features = ["proposed"] }
url = "2"

# WASI Runtime (Phase 3)
wasmtime = "14.0.0"
wasmtime-wasi = "14.0.0"
wasi-common = "14.0.0"

# ML and Indexing (Phase 11)
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
hnsw_rs = "0.3"
tokenizers = "0.15"
sha2 = "0.10"

# CLI (Phase 3)
clap = { version = "4.4", features = ["derive"] }
[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
futures = "0.3"
serde_json = "1"
wat = "1"
