[package]
name = "ownstack-bridge"
version = "0.1.0"
edition = "2021"
description = "Bridge between OwnStack Rust core and Python sidecar"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"
ownstack-engine = { path = "../ownstack-engine" }

[dev-dependencies]
tempfile = "3"
