[package]
name = "ownstack-engine"
version = "0.1.0"
edition = "2021"
description = "Security core for OwnStack Native IDE"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
regex = "1"
wait-timeout = "0.2"
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemInformation",
] }

[dev-dependencies]
tempfile = "3"
